12-03-2018/Lab-1
#: Comment

PYTHON INSTALLATION:
https://www.python.org/downloads/			# Click on Download, double click on *.dmg file, follow the process


PYTHON COMMENTS:
‘ ‘						# SINGLE QUOTATIONS
“ “ 						# DOUBLE QUOTATIONS
‘’’ ‘’’ OR “”” “”” 			# TRIPLE QUOTATIONS

>>> print("Hello World!!!")
Hello World!!!
>>> 
>>> print('Hello World!!!')
Hello World!!!
>>> 
>>> print('''Hello World!!!''')
Hello World!!!
>>> 
>>> print("""Hello World!!!""")
Hello World!!!
>>> 
>>> print('It's a bit challenge')
  File "<stdin>", line 1
    print('It's a bit challenge')
              ^
SyntaxError: invalid syntax
>>> 
>>> print("It's a bit challenge")
It's a bit challenge
>>> 
>>> print('''It's a big ...
... challenge for DD's ...
... let's see''')
It's a big ...
challenge for DD's ...
let's see
>>> 
>>> print('''It's a big "Hi!!!"...
... challenge for DD's ...
... let's see''')
It's a big "Hi!!!"...
challenge for DD's ...
let's see

